Update Testimonials “2025-12-07-gayathri”

--- a/_testimonials/2025-12-07-gayathri.md
+++ b/_testimonials/2025-12-07-gayathri.md
@@ -2,7 +2,8 @@
 client_name: Gayathri
 client_location: Muttom
 company: Accountant
-content: Very good quality products Her-Bird providing, Thank you
+description: Very good quality products Her-Bird providing, Thank you
+content: ""
 featured: false
 date: 2025-12-08
 ---
