Update Testimonials “2025-11-18-lakshmi”

--- a/_testimonials/2025-11-18-lakshmi.md
+++ b/_testimonials/2025-11-18-lakshmi.md
@@ -2,8 +2,9 @@
 client_name: Lakshmi
 client_location: Aluva
 company: House Wife
-description: I love it
-content: woooow
+description: Finding clothes that fit well and look great can be tough, but this
+  boutique nailed it. Excellent customer service, too
+content: ""
 featured: true
 date: 2025-11-19
 ---
