Update Testimonials “2025-12-07-gayathri”

--- a/_testimonials/2025-12-07-gayathri.md
+++ b/_testimonials/2025-12-07-gayathri.md
@@ -2,7 +2,8 @@
 client_name: Gayathri
 client_location: Muttom
 company: Accountant
-description: Very good quality products Her-Bird providing, Thank you
+description: The website is easy to navigate, and the clothes are even more
+  beautiful in person. I felt effortlessly chic in my purchase!
 content: ""
 featured: false
 date: 2025-12-08
